<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search for artist</string>
    <string name="action_search_hint">Type an artist name to search.</string>
    <string name="empty_list_artist">No artists found.</string>
    <string name="empty_list_track">No tracks found.</string>
    <string name="ab_title_track">Top 10 Tracks</string>
    <string name="currently_playing">Currently playing track</string>
    <string name="pause_currently_playing">Pause currently playing</string>
    <string name="skip_next">Skip next</string>
    <string name="skip_previous">Skip previous</string>
    <string name="playback_background">Playback album art</string>
    <string name="playback_loading">Loading music...</string>
    <string name="playback_buffering">Buffering...</string>
    <string name="loading">Loading...</string>
    <string name="playback_error">Error occured during playback</string>
    <string name="now_playing">Now playing</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="preferences_general_settings">General Settings</string>
    <string name="preferences_general_settings_playback_notification">Enable playback notification
    </string>
    <string name="preferences_general_settings_playback_notification_hint">Enabling this will allow
        playback to show notifications in the Android app lock screen.
    </string>
    <string name="preferences_general_settings_supported_countries">Select a country spotify is
        supported in.
    </string>
    <string name="preferences_general_settings_supported_countries_hint">By default USA is supported
    </string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
</resources>
