<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playbackContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:fitsSystemWindows="true">
    <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/playback_background"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/playback_gradient_background">
        <TextView
                android:id="@+id/playbackAlbumName"
                style="@style/PlaybackInfo"
                android:textColor="@color/grey_light"
                android:layout_above="@+id/playbackTrackName"/>
        <TextView
                android:id="@+id/playbackTrackName"
                style="@style/PlaybackInfo"
                android:textColor="@color/grey_dark"
                android:layout_above="@+id/playbackTrackArtistName"/>
        <TextView
                android:id="@+id/playbackTrackArtistName"
                style="@style/PlaybackInfo"
                android:textColor="@color/grey_dark"
                android:layout_above="@+id/controllers"/>
        <LinearLayout
                android:id="@+id/controllers"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="invisible">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                <TextView
                        android:id="@+id/playbackStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:textColor="@android:color/white"/>
                <SeekBar
                        android:id="@+id/playbackSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_toStartOf="@+id/playbackEndTime"
                        android:layout_toEndOf="@+id/playbackStartTime"/>
                <TextView
                        android:id="@+id/playbackEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_alignParentEnd="true"
                        android:gravity="center_vertical"
                        android:layout_alignWithParentIfMissing="true"
                        android:maxLines="1"
                        android:textColor="@android:color/white"/>
            </RelativeLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                <ImageView
                        android:id="@+id/previous"
                        style="@style/PlaybackControls"
                        android:src="@drawable/ic_skip_previous_white_48dp"
                        android:contentDescription="@string/skip_previous"/>
                <ImageView
                        android:id="@+id/playPause"
                        style="@style/PlaybackControls"
                        android:layout_weight="2"
                        android:src="@drawable/ic_play_arrow_white_48dp"
                        android:contentDescription="@string/pause_currently_playing"/>
                <ImageView
                        android:id="@+id/next"
                        style="@style/PlaybackControls"
                        android:src="@drawable/ic_skip_next_white_48dp"
                        android:contentDescription="@string/skip_next"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
            android:id="@+id/playbackProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
</RelativeLayout>